--- a/index.html
+++ b/index.html
@@ -77,6 +77,13 @@ body {
   background: #0c1e35;
 }
 
+@media  (min-width: 768px){
+  .backLeft{
+    background: #0c1e35 url('https://lh3.googleusercontent.com/d/1DAQTJ24ELr3yMXmH3ZVpusFeXq0STWqh') center/contain no-repeat;
+   background-size: 40%;
+  }
+}
+
 #back {
   width: 100%;
   height: 100%;
