--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ button.off.signup {
   color: #03A9F4;
 }
 button.off.login {
-  color: #192686;
+  color: #0c1e35;
 }
 
 button:focus, button:active, button:hover {
