--- a/index.html
+++ b/index.html
@@ -584,8 +584,8 @@ button:focus.off.login, button:active.off.login, button:hover.off.login {
               <input id="recover2" type="email" name="recover2">
             </div>
             <div class="form-element form-submit">
-              <button id="signin" class="signin" onclick="signin(this)" data-loading-text="<i class='fa fa-spinner fa-spin '></i> type="submit" name="signup">Registrarse</button>
-              <button id="goLeft" class="signin off" style="font-size: 13px; margin-top: 10px;">Iniciar sesión</button> 
+              <button id="signUp" class="signup" onclick="signin(this)" data-loading-text="<i class='fa fa-spinner fa-spin '></i>" type="submit" name="signup">Registrarse</button>
+              <button id="goLeft" class="signup off" style="font-size: 13px; margin-top: 10px;">Iniciar sesión</button> 
             </div>
             <div style="color: gainsboro; font-weight: 400; font-size: 13px; margin-top: 15px;"> Recibiras un email con los pasos a seguir para que puedas iniciar sesión </div>
         </div>
@@ -1631,8 +1631,7 @@ $(window).on('load', function() {
 
 
  function signin(button) {
-  var $button = $(button);
-  $button.button('loading');
+  var $button = $(button); 
   var mail = document.getElementById('recover').value;
   var mail2 = document.getElementById('recover2').value;
 
@@ -1641,7 +1640,7 @@ $(window).on('load', function() {
   }else if(mail === ""){
     alert("Por favor, ingrese su correo electrónico.")
   }else{
-
+  $button.button('loading');
   var api = "https://script.google.com/macros/s/AKfycbzuRdRbf_Yy-JUEUm4E2qzvWLm6hquJNhqEGEKecOPLowyjBJU8SS_wQ57W2--XobEA/exec";
   var validationData = {
     redirect: "follow",
