--- a/index.html
+++ b/index.html
@@ -584,7 +584,7 @@ button:focus.off.login, button:active.off.login, button:hover.off.login {
               <input id="recover2" type="email" name="recover2">
             </div>
             <div class="form-element form-submit">
-              <button id="signUp" class="signup" onclick="signin(this)" data-loading-text="<i class='fa fa-spinner fa-spin '></i>" type="submit" name="signup">Registrarse</button>
+              <button id="signUp" class="signup" onclick="signin(this)" data-loading-text="<i class='fa fa-spinner fa-spin '></i> Cargando..." name="signup">Registrarse</button>
               <button id="goLeft" class="signup off" style="font-size: 13px; margin-top: 10px;">Iniciar sesión</button> 
             </div>
             <div style="color: gainsboro; font-weight: 400; font-size: 13px; margin-top: 15px;"> Recibiras un email con los pasos a seguir para que puedas iniciar sesión </div>
