--- a/index.html
+++ b/index.html
@@ -1248,7 +1248,7 @@ app
     })
     ;
 
-  $urlRouterProvider.otherwise("menu/tab/profile");
+  $urlRouterProvider.otherwise("menu/tab/lessons");
   $ionicConfigProvider.tabs.position('bottom'); 
 })
 
