--- a/lessons.html
+++ b/lessons.html
@@ -1476,7 +1476,8 @@ app.factory('SharedState', function() {
 
 .controller('level1', ["$scope", "SharedState", function($scope, SharedState) {
    $scope.num = SharedState.num
- $scope.allData = [
+
+   $scope.allData = [
      {
           block: "Bloque 1",
           lessons: [
@@ -1495,7 +1496,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1rnUC_AB2buvh-BLf16L6SOte4ct2y4bx/preview'
                   }
                 ]
               },
@@ -1512,12 +1513,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicio',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
-                  },{
-                  icon: 'description',
-                  type: 'Marcha',
-                  media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1DRf5RdEG7C7KAVxv4wy593dfN8Cbeqat/preview'
                   }
                 ]
               },
@@ -1534,7 +1530,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1mwNObHroP8HkISXChiwQ7uiLzag6lnyq/preview'
                   }
                 ]
               }
@@ -1556,7 +1552,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1upeZQGqvk9PFCBiyIVeONZK0E0P5f01l/preview'
                   }
                 ]
               },
@@ -1578,7 +1574,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Marcha',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1gPwPtcEmfF-zBLaQLJBKwQOWYJTX_6cf/preview'
                   }
                 ]
               },
@@ -1595,7 +1591,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1_v-xICqupk8KUO32-PwZKURNhRtXRjh6/preview'
                   }
                 ]
               }
@@ -1617,7 +1613,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/10LdRbiKINHgPs3QgcZf_9Ts2WsCzvw3p/preview'
                   }
                 ]
               },
@@ -1634,13 +1630,13 @@ app.factory('SharedState', function() {
                   icon: 'auto_stories',
                   type: 'El Sostenido',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1azmdnqr2BWqj3NiWWCg-Fl0-DBcDA6II/preview'
                   },
                   {
                   icon: 'auto_stories',
                   type: 'El Bemol',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1_UXn8vUzyImBDGlY_Q9RFZOT703Nfngq/preview'
                   }
                 ]
               },
@@ -1657,7 +1653,12 @@ app.factory('SharedState', function() {
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1kr9ChyBTuFpBXg_obh62-AG3q_MRfb5q/preview'
+                  },{
+                  icon: 'description',
+                  type: 'Marcha II',
+                  media: 'pdf',
+                  url: 'https://drive.google.com/file/d/1gPwPtcEmfF-zBLaQLJBKwQOWYJTX_6cf/preview'
                   }
                 ]
               },
@@ -1674,7 +1675,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/140Aklx2WntuhqRCxChRcpKDs06soKJfA/preview'
                   }
                 ]
               }
@@ -1707,7 +1708,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1nbWUe2RCjSORXae8hCxr5U-bqy9PuOtc/preview'
                   }
                 ]
               },
@@ -1725,7 +1726,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1K_lWzEDpurCRuhJiYdCZ1rPliCSURyFe/preview'
                   }
                 ]
               },
@@ -1764,7 +1765,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1aqzF5rbWmzVnnOlqOjsjwLmzZGU1VpUY/preview'
                   }
                 ]
               },
@@ -1781,12 +1782,12 @@ app.factory('SharedState', function() {
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/18uL7_4_fhiE1n8zYyLrW_xZhCsSpYzTE/preview'
                   },{
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1N8HAVRAWFxKlmniv5Bd0jIGPl9GmD38k/preview'
                   }
                 ]
               },
@@ -1804,7 +1805,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1G8EbF6t3wgrdSgpZVAmTv6OFhI31m8XW/preview'
                   }
                 ]
               },
@@ -1821,7 +1822,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1F7mj27XUDWz6-8R6adN6f6vLUnJAEOio/preview'
                   }
                 ]
               }
@@ -1843,7 +1844,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/144ZOFA87KNajpViMk4T53YnSzMhWGZQy/preview'
                   }
                 ]
               },
@@ -1866,7 +1867,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Marcha en Fa',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1pf-AuPRZDOYyu5Bjk10Gqf0KH4G2y7i8/preview'
                   }
                 ]
               },
@@ -1883,7 +1884,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/10DBYVQ1TRzevhbiWZVj0eJ8GdyaVLA6o/preview'
                   }
                 ]
               }
@@ -1910,15 +1911,10 @@ app.factory('SharedState', function() {
                   media: 'video',
                   url: 'https://www.youtube.com/embed/'
                   },{
-                  icon: 'auto_stories',
-                  type: 'Teoría',
-                  media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
-                  },{
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1unPI5MyC-yxZCXlaUDM375iHb9DbaOyN/preview'
                   }
                 ]
               },
@@ -1935,7 +1931,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1V1Ofj99nBsVR99fJ8m2oWcuTDx33sJtz/preview'
                   }
                 ]
               }
@@ -1957,7 +1953,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1ZKfYtbA2LJmQOvZLpqJrfaZiLwyqKq7I/preview'
                   }
                 ]
               },
@@ -1991,7 +1987,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1VjDu6n4rO1HkIGWnnfh_0D7VRC9KWUW0/preview'
                   }
                 ]
               }
@@ -2013,12 +2009,12 @@ app.factory('SharedState', function() {
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1Go9CgkCirvErqeLn8QC1lF2tK69eZdSx/preview'
                   },{
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/14Aji9kUWssBCcBKU_zSCRkuK3sBwEVf7/preview'
                   }
                 ]
               },
@@ -2035,7 +2031,7 @@ app.factory('SharedState', function() {
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1W41ayDydPUrKU57OMHEfMl1BuzNYkk01/preview'
                   }
                 ]
               }
@@ -2054,18 +2050,24 @@ app.factory('SharedState', function() {
               name: 'Elección de Pieza Final',
               material:[{
                 id: 56,
-                title: 'Definición',
-                icon: 'music_note',
+                title: 'Lista A',
+                icon: 'library_music',
                 activity:[{
-                  icon: 'smart_display',
+                  icon: 'video_library',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
-                  },{
-                  icon: 'auto_stories',
-                  type: 'Teoría',
-                  media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://www.youtube.com/embed/playlist?list=PLFLLmJ16LJSx760xmJ9eCYtnrR7UnaDPK'
+                  }
+                ]
+                },{
+                id: 56,
+                title: 'Lista B',
+                icon: 'library_music',
+                activity:[{
+                  icon: 'video_library',
+                  type: 'Lección',
+                  media: 'video',
+                  url: 'https://www.youtube.com/embed/playlist?list=PLFLLmJ16LJSyGsdp96rIoa8apbDVIAmJF&si=BouvXSLTqAW5O6J7'
                   }
                 ]
                 },
