--- a/lessons.html
+++ b/lessons.html
@@ -1203,13 +1203,13 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Corcheas',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/LJIBynkI1Cs'
                   },
                    {
                   icon: 'smart_display',
                   type: 'Staccato',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/5zX6CFXf6cQ'
                   },
                   {
                   icon: 'auto_stories',
@@ -1224,12 +1224,13 @@ app.factory('SharedState', function($http, $q) {
                 id: 16,
                 title: 'Ejercicios',
                 icon: 'library_books',
-                activity:[{
+                activity:[
+                 /*{
                   icon: 'smart_display',
                   type: 'Explicación adicional',
                   media: 'video',
                   url: 'https://www.youtube.com/embed/'
-                  },
+                  },*/
                   {
                   icon: 'description',
                   type: 'Ejercicios',
@@ -1246,7 +1247,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/2R4VsyAvL60'
                   },{
                   icon: 'description',
                   type: 'Partitura',
