--- a/lessons.html
+++ b/lessons.html
@@ -951,17 +951,17 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/HHF95sBbmwQ'
                   },{
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1HKC6x6ca-whFRxlYAUKOQo7M-dpR8dtY/preview'
                   },{
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1Ys_fybQsMIjS4zaCRLO9lV8qsvmvooXq/preview'
                   }
                 ]
               },
@@ -973,12 +973,12 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/ec4ZRGMYgrY'
                   },{
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/15amNYqOJwINhWNjw8I77uRWZ-6sh15-e/preview'
                   }
                 ]
               }
@@ -995,19 +995,19 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/H4x0TPlSoaQ'
                   },
                   {
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1Wu2qa7B3hyVoOHkPWdVcDHklBgn5nk0T/preview'
                   },
                   {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1Dom_0ZjNoslBKZpUa3IUDN8XMzcxZ1Jd/preview'
                   }
                 ]
               },
@@ -1019,12 +1019,12 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/XfUF1yv0Ook'
                   },{
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1jo4LcVuPV-Q0eytfVFyDdCPqbTDX1aU9/preview'
                   }
                 ]
               }
@@ -1041,19 +1041,19 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/M6DCHr2wVh8'
                   },
                   {
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/178foCLFrPUNg1Tr536m0oBNLU3JY87JY/preview'
                   },
                   {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1G3Cun9yL_xl8ZJUhDJE5CAYTXMQUCIZY/preview'
                   }
                 ]
               },
@@ -1065,12 +1065,12 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/JCogx6-fQ0Q'
                   },{
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/19_81QSEylsakl04ZEnFXHKTDThcnI3MC/preview'
                   }
                 ]
               }
@@ -1095,20 +1095,20 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/RJnwVQHexW0'
                   },
                   {
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1V15F3hT0JQYYBP90XIMT2lHogik6s2Kj/preview'
                   },
 
                   {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1gum-qE-LUdxxRNmjh39A1xImbqYRABAX/preview'
                   }
                 ]
               },
@@ -1120,12 +1120,12 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'piano',
                   type: 'Ejemplo',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/kl_V1GltXDc'
                   },{
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1pHinigt3CUDZeBMYowtaHHP_yGjRigWo/preview'
                   }
                 ]
               }
@@ -1141,12 +1141,12 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/Y2MokfVUSqs'
                   },{
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1zhyiUNAagb5l-Z8pkWSrDt5EOtUGCf0h/preview'
                   }
                 ]
               },
@@ -1158,19 +1158,19 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'smart_display',
                   type: 'Lección',
                   media: 'video',
-                  url: 'https://www.youtube.com/embed/'
+                  url: 'https://www.youtube.com/embed/n7qaCP5a-Pc'
                   },
                   {
                   icon: 'auto_stories',
                   type: 'Teoría',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/14g5yaRgRo66fJtigaCVpN7zcZ6AusP05/preview'
                   },
                   {
                   icon: 'description',
                   type: 'Ejercicios',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1UtQsQYtjkYxqbVnCGfTmNa85xtnhG3W7/preview'
                   }
                 ]
               },
@@ -1187,7 +1187,7 @@ app.factory('SharedState', function($http, $q) {
                   icon: 'description',
                   type: 'Partitura',
                   media: 'pdf',
-                  url: 'https://drive.google.com/file/d//preview'
+                  url: 'https://drive.google.com/file/d/1-b7JbEAe5M5j_3KoSOCIs8Ss5uzez2Rw/preview'
                   }
                 ]
               }
